syntax = "proto3";

import "google/protobuf/empty.proto";
import "cloudstate/entity_key.proto";
import "google/api/annotations.proto";

package example.shoppingcart;

option go_package = "example/shoppingcart";

service ShoppingCartService {
    rpc AddItem(AddLineItem) returns (google.protobuf.Empty) {
      option (google.api.http) = {
          post: "/carts"
          body: "*"
      };
    };
    rpc RemoveItem(RemoveLineItem) returns (google.protobuf.Empty) {
      option (google.api.http) = {
          delete: "/carts"
          body: "*"
      };
    };
    rpc GetCart(GetShoppingCart) returns (Cart) {
      option (google.api.http) = {
          get: "/carts/{user_id}"
      };
    };
}

message AddLineItem {
    string user_id = 1 [(.cloudstate.entity_key) = true];
    string product_id = 2;
    string name = 3;
    int32 quantity = 4;
}

message RemoveLineItem {
    string user_id = 1 [(.cloudstate.entity_key) = true];
    string product_id = 2;
}

message GetShoppingCart {
    string user_id = 1 [(.cloudstate.entity_key) = true];
}

message LineItem {
    string product_id = 1;
    string name = 2;
    int32 quantity = 3;
}

message Cart {
    repeated LineItem items = 1;
}